# FreeRDP

./: BUILD.gn
client/: BUILD.gn
server/: BUILD.gn
server/proxy/: config.ini
